# Il2cppDumper-Android

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/musk/il2cppdumper/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hook.cpp  il2cpp_dump.cpp
app/src/main/java/com/musk/il2cppdumper/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/musk/il2cppdumper/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
